test/fails/bad_generics/declare8.lgl
tag coord model is vec<3>;
tag norm<`t : vec> is `t;

declare canon norm<`t> normalize<`t : vec>(`t x);
declare float dot<`t: genType>(norm<`t> v1, norm<`t> v2); // `t must be a vector

void main() {
    print 1;
}